angular/src/app/main/checklist/createtask/createtask.component.css
.eom-radio {
    margin-top: 125px;
}
.form-group{
    position: relative;
}
.igx-calender{
    position: absolute;
    z-index: 1;
    top: 80px;
    box-shadow: 0 0 20px #ccc;
    width: 180px;
    height: 170px;
    overflow: auto;
}
.drag_drop_box {
    margin-top: -50px;
}
.input-arrow{
    position: relative;
}
.input-arrow::after{
    content: "▼"  !important ;
    position: absolute  !important;
    top: 50%  !important;
    right: 5px  !important;
    transform: translateY(-50%)  !important;
    font-size: 11px  !important;
    color: #606060  !important;
}  

::ng-deep .uppy-Dashboard-inner {
    min-height:300px !important;
    height: 300px !important;
}
.category-selector button {
    width: 100%;
    text-align: left;
    padding: 9px 15px 8px 15px;
    height: calc(1.5em + 1.3rem + 2px);

}
.category-selector button::after {
    content: "▼" !important;
    position: absolute !important;
    font-size: 11px !important;
    color: #313030 !important;
    right: 15px !important;
    top: 50% !important;
    transform: translateY(-50%) !important;
}
label{
    color: #606060
}
.add-task{
    padding:25px;
}
.dueOn{
    margin-bottom: 6px;
}
::ng-deep .bs-datepicker-head button.current{
    position:absolute;
    left:50%;
    transform: translateX(-50%);
}
.btn-brand{
 margin-top: 5px;
}
.compress{
    width: 22px !important;
}


.chat-wrapper-inner{
    background-color: #E8E8E8;
    padding: 2px 10px;
    margin-top: 5px;
}
.docx-btn{
        display: flex;
    align-items: center;
    justify-content: space-between;
}
.chat-wrapper{
    
    padding :0px 30px !important;
    overflow-y: auto;
}

ul, ul li {
    -webkit-transform: scaleY(-1);
       -moz-transform: scaleY(-1);
        -ms-transform: scaleY(-1);
         -o-transform: scaleY(-1);
            transform: scaleY(-1);
    
    }
    ul {
        list-style: none;
        width: 100%;
        padding :0px;
        margin:0px;
        border:none;
    }
     li {
        width: 100%;
        padding :0px;
        margin:0px;
        border:none;
        *display: inline;
    }

